Updated some global CSS and z-index.

--- a/infomapper/src/styles.css
+++ b/infomapper/src/styles.css
@@ -62,3 +62,24 @@ hand corner of the Dialog do not appear to the user. */
 .mat-sidenav-container, .mat-sidenav-content, .mat-tab-body-content {
   transform: none !important;
 }
+
+/* IDs */
+
+/* Container around the right justified list of navigation circles for a Fullpage
+story. */
+#fp-nav {
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 5px;
+}
+
+/* Each individual nav circle tooltip for a Fullpage story. */
+#fp-nav ul li .fp-tooltip {
+  color: black!important;
+  background-color: rgb(255,255,255, .8);
+  border: black solid 1px;
+  border-radius: 5px;
+  padding:5px;
+  max-width:none!important;
+  right:25px!important;
+  top: -7px!important;
+}
