Updated common package from version 4.0.2 to 4.1.0. Updated some log messages.

--- a/infomapper/src/app/nav-bar/tab/tab.component.css
+++ b/infomapper/src/app/nav-bar/tab/tab.component.css
@@ -79,6 +79,10 @@ a.dropdown-item-disabled {
   user-select: none;
 }
 
+#navbarDropdown.mat-selected {
+  background-color: rgb(219, 219, 219);
+}
+
 /* Additional class to be added to an element when it is active. */
 .mat-selected {
   background-color: rgb(219, 219, 219);
