Added logging & updated variable name in Content Page component.

--- a/infomapper/src/app/content-page/content-page.component.html
+++ b/infomapper/src/app/content-page/content-page.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="validMapID === true;" fxLayout="row" fxLayoutAlign="center"
+<div *ngIf="validContentPageID === true;" fxLayout="row" fxLayoutAlign="center"
 class="main-container">
   <div fxFlex="75%" fxFlex.lt-md="100%" fxFlex.gt-lg="50%" class="display-container">
     <!-- The Showdown container that users can change to different font types, sizes, etc. -->
@@ -6,6 +6,6 @@ class="main-container">
   </div>
 </div>
 
-<div *ngIf="validMapID === false">
+<div *ngIf="validContentPageID === false">
   <app-not-found pageType="Content"></app-not-found>
 </div>
