--- a/infomapper/src/app/nav-bar/tab/tab.component.html
+++ b/infomapper/src/app/nav-bar/tab/tab.component.html
@@ -2,8 +2,7 @@
 <div *ngIf="mainMenu.menus" class="dropdown">
   <li class="nav-item dropdown">
     
-    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
-    routerLinkActive="mat-selected" class="nav-link" id="navbarDropdown"
+    <a mat-button routerLinkActive="mat-selected" class="nav-link" id="navbarDropdown"
     mainMenu-toggle="dropdown">
       {{mainMenu.name}}
     </a>
@@ -81,9 +80,8 @@
 <!-- Content Page MainMenu. -->
 <div *ngIf="mainMenu.action === 'contentPage'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
-    class="nav-link" routerLinkActive="mat-selected" [routerLink]="['/content-page/', mainMenu.id]"
-    [attr.data-cy]="mainMenu.name">
+    <a mat-button class="nav-link" routerLinkActive="mat-selected"
+    [routerLink]="['/content-page/', mainMenu.id]" [attr.data-cy]="mainMenu.name">
       {{mainMenu.name}}
     </a>
   </li>
@@ -92,8 +90,8 @@
 <!-- Dashboard MainMenu. -->
 <div *ngIf="mainMenu.action === 'dashboard'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right" class="nav-link"
-    routerLinkActive="mat-selected" [routerLink]="['/dashboard/', mainMenu.id]" [attr.data-cy]="mainMenu.name">
+    <a mat-button class="nav-link" routerLinkActive="mat-selected"
+    [routerLink]="['/dashboard/', mainMenu.id]" [attr.data-cy]="mainMenu.name">
       {{mainMenu.name}}
     </a>
   </li>
@@ -102,9 +100,8 @@
 <!-- Map MainMenu. -->
 <div *ngIf="mainMenu.action === 'displayMap'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
-    class="nav-link" routerLinkActive="mat-selected" [routerLink]="['/map/', mainMenu.id]"
-    [attr.data-cy]="mainMenu.name">
+    <a mat-button class="nav-link" routerLinkActive="mat-selected"
+    [routerLink]="['/map/', mainMenu.id]" [attr.data-cy]="mainMenu.name">
       {{mainMenu.name}}
     </a>
   </li>
@@ -113,9 +110,8 @@
 <!-- Story MainMenu. -->
 <div *ngIf="mainMenu.action === 'story'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
-    class="nav-link" routerLinkActive="mat-selected" [routerLink]="['/story/', mainMenu.id]"
-    [attr.data-cy]="mainMenu.name">
+    <a mat-button class="nav-link" routerLinkActive="mat-selected"
+    [routerLink]="['/story/', mainMenu.id]" [attr.data-cy]="mainMenu.name">
       {{mainMenu.name}}
     </a>
   </li>
@@ -124,8 +120,8 @@
 <!-- External Link MainMenu. -->
 <div *ngIf="mainMenu.action === 'externalLink'">
   <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
-    <a mat-button [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
-    [attr.href]="mainMenu.url" target="_blank" class="nav-link" [attr.data-cy]="mainMenu.name">
+    <a mat-button [attr.href]="mainMenu.url" target="_blank"
+    class="nav-link" [attr.data-cy]="mainMenu.name">
       {{mainMenu.name}}
     </a>
   </li>
