--- a/infomapper/src/app/nav-bar/nav-bar.component.css
+++ b/infomapper/src/app/nav-bar/nav-bar.component.css
@@ -17,10 +17,22 @@ mat-toolbar {
 
 /* CLASSES */
 
+/*  */
+.global-menu-button {
+  background-color: #e3e3e3;
+}
+
+/*  */
+.global-menu-option-text {
+  margin-left: 15px;
+}
+
 /* InfoMapper home button. */
 .home-button {
-  font-size: 22px;
+  font-size: 24px;
   font-weight: 600;
+  margin-right: 10px;
+  height: 80%;
 }
 
 /* All MainMenu buttons. */
@@ -28,4 +40,43 @@ mat-toolbar {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+}
+
+/* Div holding all main content elements on the left side of the toolbar. */
+.toolbar-left-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Top level toolbar div. */
+.toolbar-main-container {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+/* Div holding all main content elements on the right side of the toolbar. */
+.toolbar-right-container {
+  display: flex;
+  align-items: center;
+}
+
+/* True when the width of the window is at most 1279 pixels (x < 1279). */
+@media (max-width: 1279px) {
+
+  /* Hides the container with all NavBarMenu components. */
+  .main-menu-option-container {
+    display: none;
+  }
+}
+
+/* True when the width of the window is at least 1280 pixels (x > 1280). */
+@media (min-width: 1280px) {
+
+  /* Hides the div holding the side nav Mat icon button. */
+  .side-nav-toggle-container {
+    display: none;
+  }
 }
