--- a/infomapper/src/app/nav-bar/side-nav/side-nav.component.html
+++ b/infomapper/src/app/nav-bar/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<mat-nav-list>
+<mat-nav-list class="main-container">
 
   <a mat-list-item [routerLink]="['/home']" (click)="onSidenavClose()">Home</a>
   <mat-divider></mat-divider>
