--- a/infomapper/src/app/global-search/global-search.component.html
+++ b/infomapper/src/app/global-search/global-search.component.html
@@ -1,14 +1,15 @@
 <div class="main-container">
 
-  <h2>Search InfoMapper</h2>
+  <!-- <h2 class="global-search-title">Search InfoMapper</h2> -->
 
-  <mat-divider class="divider"></mat-divider>
+  <!-- <mat-divider class="divider"></mat-divider> -->
 
   <div class="input-submit-container">
     <form class="search-form" [formGroup]="searchFG">
 
       <mat-form-field class="search-form-field" appearance="outline">
-        <input matInput formControlName="searchString"/>
+        <mat-label>Search InfoMapper</mat-label>
+        <input matInput formControlName="searchString" placeholder="Current wildfires"/>
         <button mat-icon-button matSuffix (click)="performSearch()">
           <mat-icon>search</mat-icon>
         </button>
@@ -16,6 +17,51 @@
 
     </form>
 
+  </div>
+
+  <section class="search-container mat-elevation-z8" tabindex="0">
+    <table class="search-mat-table" mat-table [dataSource]="keywordData">
+
+      <ng-container *ngFor="let column of displayedColumns;" [matColumnDef]="column">
+        <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
+          {{ column }}
+        </th>
+        <td mat-cell *matCellDef="let element" attr.id="TODO">
+          {{ element[column] }}
+        </td>
+      </ng-container>
+  
+      <!-- Position Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+  
+      <!-- Weight Column -->
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef> Weight </th>
+        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+      </ng-container>
+  
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef> Symbol </th>
+        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </section>
+
+  <div class="global-search-utility-container">
+    <button mat-button class="close-dialog-button" (click)="closeDialog()">Close</button>
   </div>
 
 </div>
