--- a/infomapper/src/app/nav-bar/nav-bar.component.css
+++ b/infomapper/src/app/nav-bar/nav-bar.component.css
@@ -19,7 +19,9 @@ mat-toolbar {
 
 /*  */
 .global-menu-button {
-  background-color: #e3e3e3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*  */
@@ -41,6 +43,13 @@ mat-toolbar {
   padding: 0;
   margin: 0;
   display: flex;
+}
+
+/* The button for opening the Angular Material side nav. Houses a Font Awesome icon. */
+.side-nav-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Div holding all main content elements on the left side of the toolbar. */
