--- a/infomapper/src/app/global-search/global-search.component.html
+++ b/infomapper/src/app/global-search/global-search.component.html
@@ -9,7 +9,8 @@
 
       <mat-form-field class="search-form-field" appearance="outline">
         <mat-label>Search InfoMapper</mat-label>
-        <input matInput formControlName="searchString" placeholder="Current wildfires"/>
+        <input matInput formControlName="searchString" placeholder="Current wildfires"
+        (keyup)="searchInputKeyup()"/>
         <button mat-icon-button matSuffix (click)="performSearch()">
           <mat-icon>search</mat-icon>
         </button>
@@ -20,43 +21,35 @@
   </div>
 
   <section class="search-container mat-elevation-z8" tabindex="0">
-    <table class="search-mat-table" mat-table [dataSource]="keywordData">
+    <table class="search-mat-table" mat-table [dataSource]="foundKeywordData">
 
       <ng-container *ngFor="let column of displayedColumns;" [matColumnDef]="column">
         <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
           {{ column }}
         </th>
         <td mat-cell *matCellDef="let element" attr.id="TODO">
-          {{ element[column] }}
+
+          <a *ngIf="element.page" class="found-page-link" [routerLink]="[element.page]">
+            {{ element.page }}
+          </a>
+
+          <span *ngIf="!element.page">
+            {{ element[column] }}
+          </span>
+
         </td>
-      </ng-container>
-  
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-  
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-      </ng-container>
-  
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <tr class="mat-row" *matNoDataRow>
+        <td class="empty-search-cell" colspan="1">
+          <span class="empty-search-text">
+            Did not find anything that matched "<strong>{{ searchString }}</strong>"
+          </span>
+        </td>
+      </tr>
     </table>
   </section>
 
