--- a/infomapper/src/app/global-search/global-search.component.html
+++ b/infomapper/src/app/global-search/global-search.component.html
@@ -29,12 +29,12 @@
         </th>
         <td mat-cell *matCellDef="let element" attr.id="TODO">
 
-          <a *ngIf="element.page" class="found-page-link" [routerLink]="[element.page]">
+          <a *ngIf="column === 'Page'" class="found-page-link" [routerLink]="[element.page]">
             {{ element.page }}
           </a>
 
-          <span *ngIf="!element.page">
-            {{ element[column] }}
+          <span *ngIf="column === 'Relevance rating'">
+            {{ element.totalScore }}
           </span>
 
         </td>
