--- a/infomapper/src/app/not-found/not-found.component.html
+++ b/infomapper/src/app/not-found/not-found.component.html
@@ -6,8 +6,8 @@
 
   <h4>{{pageType}} Page does not exist</h4>
 
-  <div class="info-container" fxLayout="row" fxLayoutAlign="center">
-    <p class="info-text" fxFlex="75%" fxFlex.lt-md="100%" fxFlex.gt-lg="50%">
+  <div class="info-container">
+    <p class="info-text">
       Oops! The URL is not valid for this application. Sometimes URLs change as
       the application is updated. Use the the InfoMapper menu to select the page
       of interest, or go to the
