--- a/infomapper/src/styles.css
+++ b/infomapper/src/styles.css
@@ -11,8 +11,8 @@
 body {
 	overflow-y: hidden;
   color: black;
-  /* The !important tag is overriding whatever is setting the InfoMapper's Content Page Components and Map Components
-  background colors to black */
+  /* The !important tag is overriding whatever is setting the InfoMapper's Content
+  Page Components and Map Components background colors to black */
   background-color: #fafafa !important;
   font-family: Trebuchet MS,Helvetica,sans-serif!important;
 }
@@ -31,15 +31,17 @@ html, body {
 
 /* CLASSES */
 
-/* This is for a Dialog Content Component. It is CSS that overrides the default behavior for the mat-dialog-container
-created and shown as the background for the Dialog popup. Whereas the class call below changes both this div and its
-child, this will change only the sizing on the outer div. VERY IMPORTANT for resizing all dialogs. */
+/* This is for a Dialog Content Component. It is CSS that overrides the default behavior
+for the mat-dialog-container created and shown as the background for the Dialog popup.
+Whereas the class call below changes both this div and its child, this will change
+only the sizing on the outer div. VERY IMPORTANT for resizing all dialogs. */
 .custom-dialog-container {
   overflow: auto;
   resize: both; 
 }
 
-/* Sets the padding and height of both the .custom-dialog-container outer div and its child .mat-dialog-container. */
+/* Sets the padding and height of both the .custom-dialog-container outer div and
+its child .mat-dialog-container. */
 .custom-dialog-container .mat-dialog-container {
   padding-top: 0%;
   padding-left: 0%;
@@ -48,8 +50,9 @@ child, this will change only the sizing on the outer div. VERY IMPORTANT for res
   height: 100%;
 }
 
-/* Similar to .custom-dialog-container, but does not have the option for resizing, so the resizing lines in the bottom-left
-hand corner of the Dialog do not appear to the user. */
+/* Similar to .custom-dialog-container, but does not have the option for resizing,
+so the resizing lines in the bottom-left hand corner of the Dialog do not appear
+to the user. */
 .custom-dialog-container-no-resize .mat-dialog-container {
   padding-top: 0%;
   padding-left: 0%;
