--- a/infomapper/src/app/global-search/global-search.component.css
+++ b/infomapper/src/app/global-search/global-search.component.css
@@ -40,7 +40,7 @@
   width: 100%;
   margin-top: 15px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   flex: 1;
 }
 
@@ -72,6 +72,11 @@
 .mat-table-header {
   font-size: large;
   font-weight: 600;
+}
+
+/*  */
+.results-found-string {
+  margin: 0;
 }
 
 /*  */
