--- a/infomapper/src/app/nav-bar/side-nav/side-nav.component.css
+++ b/infomapper/src/app/nav-bar/side-nav/side-nav.component.css
@@ -21,6 +21,13 @@
   min-width: 200px;
 }
 
+/* Container for the main menu name and the chevron down icon. */
+.main-menu-content-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 /* Styles a menu's fa-icon and mat-list-item "a" tag to be more transparent when
 it's disabled. */
 .menu-disabled {
