--- a/infomapper/src/app/nav-bar/side-nav/side-nav.component.html
+++ b/infomapper/src/app/nav-bar/side-nav/side-nav.component.html
@@ -7,10 +7,15 @@
     <div *ngIf="mainMenu | checkElement : 'mainMenuIsVisible'">
       
       <div *ngIf="mainMenu.menus">
-        <a mat-list-item [matMenuTriggerFor]="menu"
-        [disabled]="mainMenu | checkElement : 'menuDisabled'"
+        <a mat-list-item [matMenuTriggerFor]="menu" [disabled]="mainMenu | checkElement : 'menuDisabled'"
         [ngClass]="{ 'menu-disabled': mainMenu.enabled === false }" tabindex="-1">
-          {{mainMenu.name}}
+
+        <div class="main-menu-content-container">
+          <span>{{mainMenu.name}}</span>
+
+          <fa-icon [icon]=faChevronDown size="lg" style="margin-left: 5px;"></fa-icon>
+        </div>
+          
         </a>
         <mat-menu #menu="matMenu">
 
