--- a/infomapper/src/app/nav-bar/side-nav/side-nav.component.html
+++ b/infomapper/src/app/nav-bar/side-nav/side-nav.component.html
@@ -13,7 +13,7 @@
         <div class="main-menu-content-container">
           <span>{{mainMenu.name}}</span>
 
-          <fa-icon [icon]=faChevronDown size="lg" style="margin-left: 5px;"></fa-icon>
+          <fa-icon [icon]=faChevronDown style="margin-left: 5px;"></fa-icon>
         </div>
           
         </a>
