"Moved the global search tool logic into its own service file, and drastically updated ugly code, code smells, and other refactoring improvements."

--- a/infomapper/src/app/global-search/global-search.component.css
+++ b/infomapper/src/app/global-search/global-search.component.css
@@ -14,8 +14,9 @@
 
 /*  */
 .empty-search-cell {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+  text-align: center;
 }
 
 /*  */
