--- a/infomapper/src/app/global-search/global-search.component.html
+++ b/infomapper/src/app/global-search/global-search.component.html
@@ -16,8 +16,12 @@
         </button>
       </mat-form-field>
 
-    </form>
+      <section class="search-checkbox-container">
+        <mat-checkbox class="search-checkbox" formControlName="keywordSearch">Search map keywords</mat-checkbox>
+        <mat-checkbox class="search-checkbox" formControlName="fuzzySearch">Fuzzy search</mat-checkbox>
+      </section>
 
+    </form>
   </div>
 
   <section class="search-container mat-elevation-z8" tabindex="0">
