--- a/infomapper/src/app/global-search/global-search.component.css
+++ b/infomapper/src/app/global-search/global-search.component.css
@@ -36,10 +36,9 @@
 /* Utility container at the bottom of the dialog. */
 .global-search-utility-container {
   width: 100%;
-  margin-top: 15px;
   display: flex;
   justify-content: space-between;
-  flex: 1;
+  padding: 0 15px;
 }
 
 /* Container for the input field and search button. */
@@ -186,4 +185,127 @@
 /* mat-label error style */
 ::ng-deep .mat-form-field.mat-form-field-invalid .mat-form-field-label {
   color: #9db66b !important;
+}
+
+/* This is the default name of the highest level cdk <div> in the Dialog Content
+Component. Is is used for dragging the dialog around the page by the header, and
+style used to be there. Now that the class name is known, it was been migrated to
+this CSS file */
+.cdk-drag {
+  height: 100%;
+}
+
+/* Styles the draggable div at the top of the dialog.The height should not be
+a percentage of the dialog, because it will change in size when the dialog is
+resized. Setting it to a fixed height of 40 pixels will ensure the header size
+is static no matter what. */
+.drag-header {
+  background-color: #e6e6e6;
+  height: 40px;
+  margin: 0px;
+}
+
+/* The main <div> in the dialog header that shares the top space with the dialog
+close button. 90-10 size div-to-button is used, and inline-block allows them to
+go side-by-side. */
+.drag-header-div {
+  display: inline-block;
+  height: 100%;
+  width: calc(100% - 80px)
+}
+
+/* The styling for each of the dialog titles. Font size needs to be a little larger
+than usual, and padded left to make up for the size of the upper close button on the
+right side of the <div>. It should take up 100% of the space within its parent,
+drag-header-div from above. */
+.drag-header-title {
+  font-size: large;
+  padding-top: 5px;
+  padding-left: 80px;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
+/* The class for the lower-right close button in the dialog. The float: right overrides
+the display: inline-block and shoves the button all the way to the right. */
+.lower-dialog-close-button {
+  float: right;
+  margin: 0px 25px 0px 20px;
+  background-color: #c2c1c1;
+}
+
+/* For each component that uses this style file, this will make it so all mat-raised-button's
+will not have an outline at any time, whether when the dialog is created or click
+on by the user. */
+.mat-raised-button {
+  outline: none;
+  padding: 0px 8px 0px 8px;
+}
+
+/* When a mat-raised-button is clicked, there is a focus on it that slightly deepens
+the color of the button. This overrides that so that it always stays the same color. */
+.mat-raised-button ::ng-deep .mat-button-focus-overlay {
+  display: none;
+}
+
+/* The class for the upper-right close button in a dialog. The inline-block display
+makes it so that it will share with the title header div, rendering them side-by-side. */
+.upper-dialog-close-button {
+  background-color: #c2c1c1;
+  height: 100%;
+  width: 80px;
+  float: right;
+  outline: none;
+}
+
+/* CLASSES */
+
+/* Div class that takes up 5.5% of the height of the dialog and is gray to differentiate itself from the dialog content */
+.drag-header-main {
+  background-color: #e6e6e6;
+  height: 40px;
+  margin: 0px;
+}
+
+.header-div {
+  display: inline-block;
+  height: 100%;
+  width: 80%;
+}
+
+.header-title {
+  font-size: large;
+  padding-left: calc(20% + 40px);
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
+/* Sets a max height for the text in the Dialog, as well as uses Courier font for formatting the text correctly and making the
+font smaller so that's it still readable, but the user won't have to scroll a lot to get around the data. */
+.text-contents {
+  height: calc(100% - 90px);
+}
+
+/* The height takes up all of the .text-box from above, and uses Courier to display text correctly.  */
+.text-contents-text {
+  height: 100%;
+  font-family: 'Courier New', Courier, monospace !important;
+  font-size: small;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+.text-components-group {
+  float: right;
+  height: 50px;
+}
+
+/* Puts a margin at the top of all buttons in this text dialog so they don't hug the bottom scroll bar of
+the displayed text */
+.text-components-group button {
+  margin-top: 6px;
 }
