--- a/infomapper/src/app/global-search/global-search.component.html
+++ b/infomapper/src/app/global-search/global-search.component.html
@@ -1,71 +1,94 @@
-<div class="main-container" [attr.data-cy]="'global-search-main-container'">
-
-  <!-- <h2 class="global-search-title">Search InfoMapper</h2> -->
-
-  <!-- <mat-divider class="divider"></mat-divider> -->
-
-  <div class="input-submit-container">
-    <form class="search-form" [formGroup]="searchFG">
-
-      <mat-form-field class="search-form-field" appearance="outline">
-        <mat-label>Search InfoMapper</mat-label>
-        <input matInput formControlName="searchString" placeholder="Current wildfires"
-        (keyup)="searchInputKeyup()" [attr.data-cy]="'global-search-input'"/>
-        <button mat-icon-button matSuffix (click)="performSearch()">
-          <mat-icon>search</mat-icon>
-        </button>
-      </mat-form-field>
-
-      <section class="search-checkbox-container">
-        <mat-checkbox class="search-checkbox" formControlName="keywordSearch"
-        [attr.data-cy]="'global-search-keyword-checkbox'">
-          Search map keywords
-        </mat-checkbox>
-        <mat-checkbox class="search-checkbox" formControlName="fuzzySearch"
-        [attr.data-cy]="'global-search-fuzzy-checkbox'">
-          Fuzzy search
-        </mat-checkbox>
-      </section>
-
-    </form>
+<!-- The draggable <h1> element so a user can move a graph around anywhere on the screen -->
+<div cdkDrag cdkDragRootElement=".cdk-overlay-pane">
+  <!-- The draggable <h1> element so a user can move a graph around anywhere on the screen, but only using the h1 -->
+  <div mat-dialog-title cdkDragHandle class="drag-header-main">
+    <!-- Keep this empty for now. Might add a title later on for regular text files -->
+    <div class="header-div">
+      <p class="header-title">
+        Search the InfoMapper
+      </p>
+    </div>
+    <!-- The close button on the upper right part of the dialog -->
+    <button mat-button (click)="onClose()" class="upper-dialog-close-button">
+      <fa-icon [icon]="faXmark" size="xl"></fa-icon>
+    </button>
   </div>
 
-  <section class="search-container mat-elevation-z8" tabindex="0">
-    <table class="search-mat-table" mat-table [dataSource]="searchResultDisplay">
+  <!-- Show a regular text file if the showText Dialog class variable is true -->
+  <div class="text-contents">
+    
+    <div class="main-container" [attr.data-cy]="'global-search-main-container'">
 
-      <ng-container *ngFor="let column of displayedColumns;" [matColumnDef]="column">
-        <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
-          {{ column }}
-        </th>
-        <td mat-cell *matCellDef="let element" attr.id="TODO">
+      <!-- <h2 class="global-search-title">Search InfoMapper</h2> -->
+    
+      <!-- <mat-divider class="divider"></mat-divider> -->
+    
+      <div class="input-submit-container">
+        <form class="search-form" [formGroup]="searchFG">
+    
+          <mat-form-field class="search-form-field" appearance="outline">
+            <mat-label>Search InfoMapper</mat-label>
+            <input matInput formControlName="searchString" placeholder="Current wildfires"
+            (keyup)="searchInputKeyup()" [attr.data-cy]="'global-search-input'"/>
+            <button mat-icon-button matSuffix (click)="performSearch()">
+              <mat-icon>search</mat-icon>
+            </button>
+          </mat-form-field>
+    
+          <section class="search-checkbox-container">
+            <mat-checkbox class="search-checkbox" formControlName="keywordSearch"
+            [attr.data-cy]="'global-search-keyword-checkbox'">
+              Search map keywords
+            </mat-checkbox>
+            <mat-checkbox class="search-checkbox" formControlName="fuzzySearch"
+            [attr.data-cy]="'global-search-fuzzy-checkbox'">
+              Fuzzy search
+            </mat-checkbox>
+          </section>
+    
+        </form>
+      </div>
+    
+      <section class="search-container mat-elevation-z8" tabindex="0">
+        <table class="search-mat-table" mat-table [dataSource]="searchResultDisplay">
+    
+          <ng-container *ngFor="let column of displayedColumns;" [matColumnDef]="column">
+            <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
+              {{ column }}
+            </th>
+            <td mat-cell *matCellDef="let element" attr.id="TODO">
+    
+              <a *ngIf="column === 'Page'" class="found-page-link" [routerLink]="[element.routerPath]">
+                {{ element.page }}
+              </a>
+    
+              <span *ngIf="column === 'Type'">
+                {{ element.type }}
+              </span>
+    
+              <span *ngIf="column === 'Relevance rating'">
+                {{ element.totalScore }}
+              </span>
+    
+            </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+          <tr class="mat-row" *matNoDataRow>
+            <td class="empty-search-cell" colspan="3">
+              <span class="empty-search-text">
+                Did not find anything that matched "<strong>{{ searchString }}</strong>"
+              </span>
+            </td>
+          </tr>
+        </table>
+      </section>
+    
+    </div>
 
-          <a *ngIf="column === 'Page'" class="found-page-link" [routerLink]="[element.routerPath]">
-            {{ element.page }}
-          </a>
-
-          <span *ngIf="column === 'Type'">
-            {{ element.type }}
-          </span>
-
-          <span *ngIf="column === 'Relevance rating'">
-            {{ element.totalScore }}
-          </span>
-
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-      <tr class="mat-row" *matNoDataRow>
-        <td class="empty-search-cell" colspan="3">
-          <span class="empty-search-text">
-            Did not find anything that matched "<strong>{{ searchString }}</strong>"
-          </span>
-        </td>
-      </tr>
-    </table>
-  </section>
+  </div>
 
   <div class="global-search-utility-container">
     <div style="display: flex; align-items: center;">
@@ -75,7 +98,12 @@
       </p>
     </div>
 
-    <button mat-button class="close-dialog-button" (click)="closeDialog()">Close</button>
+    <!-- CLOSE button -->
+    <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button"
+    attr.data-cy="global-search-dialog-lower-close">
+      Close
+    </button>
+
   </div>
 
 </div>
